# Interface

./: .gitignore  .parcelrc  Cargo.toml  README.md  package-lock.json  package.json
pkg/: README.md  meerkat_remote_console_V2.d.ts  meerkat_remote_console_V2.js  meerkat_remote_console_V2_bg.wasm  meerkat_remote_console_V2_bg.wasm.d.ts  package.json
site/: App.js  FilterBar.js  SearchBar.js  Sidebar.js  console.js  index.html  package-lock.json  package.json  types.d.ts
site/.parcel-cache/: 08a3d01327d7809a-BundleGraph  500462cf49c47703-AssetGraph  6a7685c2423c21d2-RequestGraph  f9c0b5d0b4b60bf3-AssetGraph  lock.mdb  snapshot-6a7685c2423c21d2.txt
site/edges/: ActionEdge.js
site/nodes/: Action.js  Definition.js  HTML.js  Module.js  Table.js  Variable.js
site/store/: nodeSlice.js  store.js  variableSlice.js
src/: lib.rs
