[package]
name = "meerkat_remote_console_V2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
gloo-net = "0.3"
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
cookie_store = "0.20"
wasm-bindgen-futures = "0.4"
futures = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", "Window", "Document", "HtmlInputElement", "WebSocket", "MessageEvent", "EventTarget", "EventListener"
] }
rand = "0.8"
once_cell = "1.19"
getrandom = { version = "0.2.15", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"